EdmondKarp fixed and GetAllSchedules added
